--- a/app.json
+++ b/app.json
@@ -19,7 +19,7 @@
       "infoPlist": {
         "NSPhotoLibraryUsageDescription": "Allows FarmGuard Maintenance to access photos you select from your library to attach to maintenance records, such as choosing an existing photo of equipment or a repair.",
         "NSPhotoLibraryAddUsageDescription": "Allows FarmGuard Maintenance to save maintenance photos to your photo library, such as saving a photo of equipment or a completed repair for your personal records.",
-        "NSCameraUsageDescription": "FarmGuard Maintenance uses the camera to take photos of equipment and maintenance work, which are attached to maintenance records (for example, photographing a tractor, combine, damaged part, or completed repair while servicing equipment).",
+        "NSCameraUsageDescription": "FarmGuard Maintenance uses the camera to take photos of equipment and maintenance work, which are attached to maintenance records (for example, photographing a tractor, combine, damaged part, or completed repair while servicing equipment)."
       },
       "usesIcloudStorage": true
     },
